# NN

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  main.cpp
src/: activ.cpp  activ.h  data.cpp  data.h  init.h  layer.h  net.cpp  net.h  optim.cpp  optim.h  trainer.h  utils.cpp  utils.h
